fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html, body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .reveal {
